# IntroPythonExam

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/: data_processing.py  main.py  password_processing.py
backend/api/: cve_api.py  kev_api.py
frontend/: Home.py
frontend/pages/: 1_Password.py  2_MyWatchList.py  AskElliot.py
